# gsuid_core

./: .cnb.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cn  README.md  check_pypi_mirrors.py  docker-compose.bundle.yml  docker-compose.dev.yaml  docker-compose.yml  docker-entrypoint.sh  docker-init.sh  gscore.mustache  gsuid-core.lnk  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  scratch_startup_keys.json  uv.toml
.github/workflows/: i18n.yml
docker/base/: Dockerfile
docs/: AGENT_NODE_UNIFICATION_20260707.md  AI_AGENT_ARCHITECTURE.md  AI_AGENT_CAPABILITY_UPGRADE.md  AI_AGENT_FRAMEWORK_REVIEW_2026-05-17.md  AI_AGENT_LIFECYCLE_SEQUENCE.md  AI_CORE_ARCHITECTURE_REVIEW_20260707.md  AI_CORE_CHANGE_REVIEW_20260712.md  AI_CORE_OOC_DELEGATION_UPDATE_20260724.md  AI_CORE_TOOL_RETRIEVAL_UPGRADE_20260619.md  AI_CORE_UPDATE_20260615.md  AI_QUESTION_FLOW_PLAYBOOK.md  AI_SESSION_LOGGING.md  AI_SESSION_LOG_CHAIN_AND_WATERFALL_20260708.md  AI_TRIGGER_FLOW.md  CHANGELOG_memory_eval_20260706.md  LLM.md  MCP_SERVER.md  MCP_TOOL_PERMISSIONS.md  MEMORY_LEAK_FIX_REPORT.md  MEMORY_SYSTEM.md  MESSAGE_HISTORY_DECOUPLING.md  OPTIMIZATION_CHANGELOG.md  PluginDev.md  RECALL_AND_META_EVENTS.md  STARTUP_HOOK_CHANGELOG.md  ai_core_api_for_plugins.md  message_flow.md  plugin_developer_agent_skill_audit.md  startup.md  toAgent.md
docs/skills/gscore-adapter-development/: SKILL.md
docs/skills/gscore-ai-core-api/: SKILL.md
docs/skills/gscore-deploy/: SKILL.md
docs/skills/gscore-development/: SKILL.md
docs/skills/gscore-plugin-development/: SKILL.md
docs/skills/gscore-to-ai-trigger-migration/: SKILL.md
eval/: __init__.py  run_eval.py  run_longmem_eval.py
eval/BEAM_10M/: README.md  __init__.py  ingest_graph.py  quick_eval.py  run_beam_eval.py
eval/agent/: README.md  gen_ooc_eval.py  harness.py  ooc_long_test.py  run.py  runner.py  selftest.py
eval/agent/cases/: adversarial_holdout.yaml  adversarial_holdout_v2.yaml  agent_hard_suite.yaml  benign_fp.yaml  ooc_long_session.yaml
eval/common/: __init__.py  http_client.py  io.py  judge.py  runner.py
eval/longmemeval/: __init__.py  run_longmem_eval.py
eval/tool_selection/: README.md  run.py
gsuid_core/: __init__.py  app_life.py  aps.py  benchmark.py  bot.py  client.py  config.json  config.py  core.py  data_store.py  global_val.py  gs_logger.py  gss.py  gsuid_core.lnk  handler.py  hook.py  i18n.py  load_template.py  logger.py  message_models.py  model.py  models.py  pool.py  security_manager.py  segment.py  server.py  shutdown.py  startup_info.py  subscribe.py  sv.py  trace_archive.py  trigger.py  web_app.py
gsuid_core/ai_core/: README.md  __init__.py  ai_config.py  ai_router.py  buildin_tools.py  check_func.py  const.py  content_guard.py  context_assembly.py  dynamic_toolset.py  embedding.py  entity_index.py  followup_window.py  gs_agent.py  handle_ai.py  history_format.py  interaction_scaffold.py  mode_classifier.py  models.py  normalize.py  openai_api.py  output_firewall.py  prompts_chat.py  prompts_qa.py  prompts_tools.py  rag.py  register.py  reranker.py  resource.py  self_cognition.py  session_logger.py  session_registry.py  startup.py  tool_state_signals.py  trigger_bridge.py  utils.py  wall_clock.py
gsuid_core/ai_core/agent_node/: __init__.py  models.py  persona_proj.py  registry.py  tool_packs.py
gsuid_core/ai_core/approval/: __init__.py  center.py  models.py
gsuid_core/ai_core/budget/: __init__.py  config.py  manager.py  models.py
gsuid_core/ai_core/buildin_tools/: README.md  __init__.py  approval_tools.py  avatar_tools.py  command_executor.py  database_query.py  (+19 more)
gsuid_core/buildin_plugins/: gs_test.py
gsuid_core/help/: draw_core_help.py  draw_help.py  draw_new_plugin_help.py  draw_plugin_help.py  help.json  master_help.json  model.py  utils.py
gsuid_core/locales/: en.json  ja.json  zh-cn.json
gsuid_core/message_history/: __init__.py  manager.py
gsuid_core/plugins/: gs_test.py
gsuid_core/status/: draw_status.py  get_hw.py  models.py  plugin_status.py  utils.py
gsuid_core/tools/: gen_help.py
gsuid_core/utils/: cache.py  cooldown.py  error_reply.py  message.py  resource_manager.py
gsuid_core/webconsole/: API.md  __init__.py  _api_tags.py  _local_test_gate.py  agent_debug_api.py  ai_memory_api.py  ai_performance_api.py  ai_scheduled_task_api.py  ai_session_logs_api.py  ai_skills_api.py  ai_statistics_api.py  ai_tools_api.py  ai_wizard_api.py  app_app.py  approvals_api.py  artifacts_api.py  assets_api.py  auth_api.py  auth_crypto.py  backup_api.py  brand_api.py  budget_api.py  capability_agents_api.py  chat_with_history_api.py  core_config_api.py  create_analysis_panel.py  create_aps_panel.py  create_backup_panel.py  create_base_panel.py  create_batch_push_panel.py  create_config_panel.py  create_core_config_panel.py  create_error_panel.py  create_history_log.py  create_input_panel.py  create_log_panel.py  create_sv_panel.py  create_task_panel.py  dashboard_api.py  database_api.py  (+36 more)
tests/: test_ai_session_logger.py  test_ai_tool_docstrings.py  test_approval_center.py  test_auth_crypto.py  test_behavior_scaffold_fixes.py  test_benign_fp.py  test_capability_delegation_flow.py  test_context_assembly.py  test_entity_index.py  test_entity_routing.py  test_extract_json.py  test_history_lean.py  test_history_watermark_and_provenance.py  test_intent_context.py  test_interaction_scaffold.py  test_kanban_interactive_relay.py  test_logger_i18n.py  test_memory_ingestion_durability.py  test_memory_injection_quality.py  test_my_kanban_tools.py  test_notify_master.py  test_ooc_fixes.py  test_ooc_structured_intercept.py  test_output_linebreaks_and_preference_gate.py  test_p2_fixes.py  test_permissions.py  test_pydantic_ai_v213_upgrade.py  test_rag_backoff.py  test_reactive_gate_prefilter.py  test_recurring_cron_dow.py  test_report_artifact_channel.py  test_restart.py  test_review_fixes_20260717.py  test_security_guard.py  test_send_message_by_ai_guard.py  test_token_efficiency.py  test_tool_args_canonicalize.py  test_tool_family_expansion.py
(+441 files in other folders)
