[tool.poetry]
name = "gsuid-core"
version = "0.1.0"
description = "KimigaiiWuyi/GenshinUID 的核心部分，平台无关，便于移植到其他平台以及框架。"
authors = ["KimigaiiWuyi <444835641@qq.com>", "MingxuanGame <MingxuanGame@outlook.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/Genshin-bots/gsuid-core"
repository = "https://github.com/Genshin-bots/gsuid-core"
readme = "README.md"
packages = [{include = "gsuid_core"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Genshin-bots/gsuid-core/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
httpx = ">=0.23.0"
beautifulsoup4 = ">=4.11.1"
lxml = ">=4.9.2"
openpyxl = ">=3.0.10"
aiohttp = ">=3.8.1"
sqlalchemy = ">=1.4.39,<2.0.0"
pillow = ">=9.2.0"
aiosqlite = ">=0.17.0"
nonebot-plugin-apscheduler = ">=0.1.4"
aiofiles = ">=0.8.0"
sqlmodel = ">=0.0.8"
gitpython = ">=3.1.27"
fastapi-amis-admin = ">=0.2.1"
fastapi-user-auth = ">=0.2.1"
qrcode = {extras = ["pil"], version = "^7.3.1"}
msgspec = ">= 0.13.1"
uvicorn = ">=0.20.0"
rollbar = "^0.16.3"
websockets = "^10.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pycln = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]
