[tool.poetry]
name = "gsuid-core"
version = "0.7.5"
description = "KimigaiiWuyi/GenshinUID 的核心部分，平台无关，便于移植到其他平台以及框架。"
authors = ["KimigaiiWuyi <444835641@qq.com>", "MingxuanGame <MingxuanGame@outlook.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/Genshin-bots/gsuid-core"
repository = "https://github.com/Genshin-bots/gsuid-core"
readme = "README.md"
packages = [{include = "gsuid_core"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Genshin-bots/gsuid-core/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = ">=0.23.0"
beautifulsoup4 = ">=4.11.1"
lxml = ">=4.9.2"
aiohttp = ">=3.8.1"
sqlalchemy = ">=2.0.0,<2.1.0"
pillow = ">=10.2.0"
aiosqlite = ">=0.17.0"
aiofiles = ">=0.8.0"
sqlmodel = ">=0.0.14"
gitpython = ">=3.1.27"
fastapi-amis-admin = ">=0.7.1"
fastapi-user-auth = ">=0.7.2"
qrcode = {extras = ["pil"], version = "^7.3.1"}
msgspec = ">= 0.13.1"
uvicorn = ">=0.20.0"
websockets = ">=13.1"
loguru = ">=0.6.0"
urllib3 = "^1.26.15"
mpmath = "^1.3.0"
fastapi = "<0.112.3"
apscheduler = "^3.10.1"
aioboto3 = "^12.0.0"
jinja2 = "^3.1.2"
colorama = "^0.4.6"
async-timeout = "^4.0.3"
toml = "^0.10.2"
bcrypt = "^4.0.1"
setuptools = ">=69.0.3"
pydantic = ">=2.0.0, <=2.8.2"
pydantic-settings = ">=2.3.4"
email-validator = "^2.2.0"
pydantic-core = ">=2.20.1"
psutil = "^6.1.1"
pytz = "^2024.2"
pandas = "^2.2.3"
betterproto = ">=2.0.0b7"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pycln = "^2.1.2"


[tool.poetry.scripts]
core = "gsuid_core.core:main"

[tool.pdm.scripts]
core = "gsuid_core/core.py"

[tool.pdm.dev-dependencies]
dev = [
    "flake8<8.0.0,>=7.0.0",
    "black<26.0.0,>=25.0.0",
    "isort<7.0.0,>=6.0.0",
    "pre-commit<3.0.0,>=2.21.0",
    "pycln<3.0.0,>=2.1.2",
]

[tool.pdm.build]
includes = ["gsuid_core"]

[[tool.poetry.source]]
name = "NJU"
url = "https://mirrors.volces.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[project]
authors = [
    {name = "KimigaiiWuyi", email = "444835641@qq.com"},
    {name = "MingxuanGame", email = "MingxuanGame@outlook.com"},
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx>=0.23.0",
    "beautifulsoup4>=4.11.1",
    "lxml>=4.9.2",
    "aiohttp>=3.8.1",
    "sqlalchemy<2.1.0,>=2.0.0",
    "pillow>=10.2.0",
    "aiosqlite>=0.17.0",
    "aiofiles>=0.8.0",
    "sqlmodel>=0.0.8",
    "gitpython>=3.1.27",
    "fastapi-amis-admin>=0.7.1",
    "fastapi-user-auth>=0.7.2",
    "qrcode[pil]<8.0.0,>=7.3.1",
    "msgspec>=0.13.1",
    "uvicorn>=0.20.0",
    "websockets>=13.1",
    "loguru<1.0.0,>=0.6.0",
    "urllib3<2.0.0,>=1.26.15",
    "mpmath<2.0.0,>=1.3.0",
    "fastapi>=0.97.0,<0.112.3",
    "apscheduler<4.0.0,>=3.10.1",
    "aioboto3<13.0.0,>=12.0.0",
    "jinja2<4.0.0,>=3.1.2",
    "colorama<1.0.0,>=0.4.6",
    "async-timeout>=4.0.3",
    "toml>=0.10.2",
    "bcrypt==4.0.1",
    "setuptools>=69.0.3",
    "email-validator>=2.2.0",
    "pydantic<=2.8.2,>=2.0.0",
    "pydantic-settings>=2.3.4",
    "pydantic-core>=2.20.1",
    "annotated-types>=0.7.0",
    "sqlmodel>=0.0.14",
    "loguru>=0.6.0",
    "fastapi<0.112.3",
    "async-timeout<5.0.0,>=4.0.3",
    "toml<1.0.0,>=0.10.2",
    "bcrypt<5.0.0,>=4.0.1",
    "email-validator<3.0.0,>=2.2.0",
    "psutil>=6.1.1",
    "pytz>=2024.2",
    "pandas>=2.2.3",
    "betterproto>=2.0.0b7",
    "structlog>=25.3.0",
    "rich>=14.0.0",
]
name = "gsuid-core"
version = "0.7.5"
description = "KimigaiiWuyi/GenshinUID 的核心部分，平台无关，便于移植到其他平台以及框架。"
readme = "README.md"

[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "NJU"
url = "https://mirrors.volces.com/pypi/simple/"

[project.urls]
"Bug Tracker" = "https://github.com/Genshin-bots/gsuid-core/issues"
homepage = "https://github.com/Genshin-bots/gsuid-core"
repository = "https://github.com/Genshin-bots/gsuid-core"

[project.scripts]
core = "gsuid_core.core:main"
